[package]
name = "bndm"
version = "1.0.1"
authors = ["Wilfred Bos"]
description = "A Rust library that implements the BNDM algorithm for fast and efficient pattern matching, with support for wildcard searches."
readme = "README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/WilfredC64/bndm"
documentation = "https://docs.rs/bndm/"
keywords = ["pattern-matching", "bndm", "string", "search", "wildcard"]
categories = ["algorithms"]

[dependencies]
